# exercism-collection

./: exercism.code-workspace
bash/error-handling/: error_handling.sh  error_handling_test.sh
bash/hello-world/: hello_world.sh
bash/leap/: leap.sh
go/hello-world/: hello_world.go
javascript/hello-world/: package-lock.json
javascript/two-fer/: package-lock.json  two-fer.js
rust/: Cargo.toml
rust/armstrong-numbers/.exercism/: metadata.json
rust/armstrong-numbers/src/: lib.rs
rust/beer-song/.exercism/: metadata.json
rust/beer-song/src/: lib.rs
rust/bob/.exercism/: metadata.json
rust/bob/src/: lib.rs
rust/clock/.exercism/: metadata.json
rust/clock/src/: lib.rs
rust/clock/tests/: clock.rs
rust/difference-of-squares/.exercism/: metadata.json
rust/difference-of-squares/src/: lib.rs
rust/gigasecond/.exercism/: metadata.json
rust/gigasecond/src/: lib.rs
rust/grains/.exercism/: metadata.json
rust/hello-world/.exercism/: metadata.json
rust/leap/.exercism/: metadata.json
rust/matching-brackets/.exercism/: metadata.json
rust/matching-brackets/src/: lib.rs
rust/nth-prime/.exercism/: metadata.json
rust/nth-prime/src/: lib.rs
rust/prime-factors/.exercism/: metadata.json
rust/prime-factors/src/: lib.rs
rust/proverb/.exercism/: metadata.json
rust/raindrops/.exercism/: metadata.json
rust/raindrops/src/: lib.rs
rust/reverse-string/.exercism/: metadata.json
rust/sum-of-multiples/.exercism/: metadata.json
rust/sum-of-multiples/src/: lib.rs
typescript/difference-of-squares/: difference-of-squares.ts  package-lock.json
(+26 files in other folders)
